+db subjects